data/derived/sp14/progs/unify/prog3388.ml.out
Characters 79-109:
  print_string "going into then" /print_newline();
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         int
